--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=CrudApp
+
+
+#for creating schemas and tables
+
+server.port = 9090
+
+#db configuration
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/crud_feature
+spring.datasource.username = root
+spring.datasource.password= root
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#create,update, create-drop,validate
+spring.jpa.hibernate.ddl-auto = update
+
+
+spring.jpa.properties.hibernate.format_sql=true
